--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-test.py
-base.py
-send.py
-recieve.py
+/test.py
+/base.py
+/send.py
+/recieve.py
 /9931099_HW1
 9931099_HW1.zip
 assignment_template.docx
